add menu and footer, reworked tablet version

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -12,6 +12,13 @@
     }
   }
 
+  @include onTablet {
+    &__slider {
+      width: 100%;
+      height: 580px;
+    }
+  }
+
   &--grid {
     display: none;
 
