--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -8,4 +8,21 @@
     left: 20px;
     background-image: url(../images/menu.svg);
   }
+
+  &--close {
+    display: block;
+    margin-top: 33px;
+    height: 13px;
+
+    background-image: url(../images/close.svg);
+    background-repeat: no-repeat;
+
+    @include onTablet {
+      margin-bottom: 160px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 175px;
+    }
+  }
 }
