--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,13 +1,18 @@
 .logo {
-  display: block;
-  padding: 10px 133px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: $textColor;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   @include onTablet {
-    padding: 15px 20%;
-    height: 70px;
-  }
-
-  @include onDesktop {
+    display: block;
     padding: 15px 50px;
   }
 }
