--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -25,8 +25,6 @@
       height: 410px;
       width: 280px;
 
-      transition: all 0.5s;
-
       &:hover {
         transition: all 0.5s;
         transform: scale(1.05);
@@ -95,36 +93,66 @@
       }
     }
   }
-}
 
-#point1:checked ~ .slider__slide--go {
-  margin-left: 0;
-}
+  @include onTablet {
+    &__slide {
+      text-align: center;
+      height: 543px;
+      width: 100%;
 
-#point2:checked ~ .slider__slide--go {
-  margin-left: -25%;
-}
+      &--image {
+        object-position: center;
+        height: 543px;
+        width: 340px;
+        margin-right: 20px;
+      }
+    }
+  }
 
-#point3:checked ~ .slider__slide--go {
-  margin-left: -50%;
-}
+  
+  @include onTablet {
+    #point1:checked ~ .slider__slide--go {
+      margin-left: 0;
+    }
+    
+    #point2:checked ~ .slider__slide--go {
+      margin-left: -12.5%;
+    }
+    
+    #point3:checked ~ .slider__slide--go {
+      margin-left: -25%;
+    }
+  }
 
-#point4:checked ~ .slider__slide--go {
-  margin-left: -75%;
-}
-
-#point1:checked ~ .slider__dots .slider__dot--1 {
-  background-color: $colorGreen;
-}
-
-#point2:checked ~ .slider__dots .slider__dot--2 {
-  background-color: $colorGreen;
-}
-
-#point3:checked ~ .slider__dots .slider__dot--3 {
-  background-color: $colorGreen;
-}
-
-#point4:checked ~ .slider__dots .slider__dot--4 {
-  background-color: $colorGreen;
+  #point1:checked ~ .slider__slide--go {
+    margin-left: 0;
+  }
+  
+  #point2:checked ~ .slider__slide--go {
+    margin-left: -25%;
+  }
+  
+  #point3:checked ~ .slider__slide--go {
+    margin-left: -50%;
+  }
+  
+  #point4:checked ~ .slider__slide--go {
+    margin-left: -75%;
+  }
+  
+  #point1:checked ~ .slider__dots .slider__dot--1 {
+    background-color: $colorGreen;
+  }
+  
+  #point2:checked ~ .slider__dots .slider__dot--2 {
+    background-color: $colorGreen;
+  }
+  
+  #point3:checked ~ .slider__dots .slider__dot--3 {
+    background-color: $colorGreen;
+  }
+  
+  #point4:checked ~ .slider__dots .slider__dot--4 {
+    background-color: $colorGreen;
+  }
 }
