--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,4 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 @import "blocks/grid.scss";
 @import "blocks/container.scss";
 @import "blocks/header.scss";
@@ -14,7 +12,5 @@
 @import "blocks/slider.scss";
 @import "blocks/gallery.scss";
 @import "blocks/subcription.scss";
-
-body {
-  background: $c-gray;
-}
+@import "blocks/footer.scss";
+@import "blocks/menu.scss";
