--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,6 +1,6 @@
 $c-gray: #eee;
 $textColor: #0f0e08;
 $colorGreen: #1a5a4c;
-$squareColor: #f1aa27;
+$squareColor: #f14f27;
 $colorTitle: #687480;
 $colorDescr: #4e4e4e;
