--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,9 +1,17 @@
 .header {
   box-sizing: border-box;
-  font-family: Inter, serif;
+  font-family: "Inter", serif;
   width: 100%;
   height: 300px;
   margin-bottom: 20px;
+
+  @include onTablet {
+    padding-bottom: 88px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 200px;
+  }
 
   background-size: cover;
   background-position: center;
@@ -11,14 +19,12 @@
 
   @include onTablet {
     position: relative;
-    width: 374px;
     height: 384px;
+    width: 50%;
     left: 50%;
   }
 
   @include onDesktop {
-    width: 725px;
     height: 655px;
   }
-
 }
