--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,27 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/variables.scss";
+@import "./utils/mixins.scss";
+@import "./blocks/page.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/events.scss";
+@import "./blocks/title.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/lection.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/button.scss";
+@import "./blocks/gallery.scss";
 
-body {
-  background: $c-gray;
+* {
+  box-sizing: border-box;
+}
+
+p,
+h1,
+h2,
+ul {
+  margin: 0;
+  padding: 0;
 }
