--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,38 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  margin: 0;
+  max-width: 450px;
+}
+
+h2 {
+  margin: 0;
+}
+
+body {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.color--b {
+  color: black;
+  text-decoration: none;
+}
+
+.color--w {
+  color: #fff;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.page__body {
+
+  &--with-menu {
+    overflow: hidden;
+  }
 }
