--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -59,26 +59,26 @@
         opacity: 1;
 
         @include onPad {
-          opacity: 0;
+          display: none;
         }
       }
     }
 
     &--pad {
-      opacity: 0;
+      display: none;
 
       @include onPad {
-        opacity: 1;
+        display: contents;
         height: 550px;
       }
 
       @include onDesktop {
-        opacity: 0;
+        display: none;
       }
 
       &-phantom {
         position: relative;
-        opacity: 0;
+        display: none;
         height: 550px;
 
         @include onPad {
@@ -87,13 +87,13 @@
         }
 
         @include onDesktop {
-          opacity: 0;
+          display: none;
         }
       }
     }
 
     &--desktop {
-      opacity: 0;
+      display: none;
       width: 0;
       height: 0;
 
