--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -10,6 +10,11 @@ h2 {
 body {
   margin: 0;
   box-sizing: border-box;
+  width: 320px;
+
+  @include onPad {
+    width: 100%;
+  }
 }
 
 .color--b {
