landing page was finished

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -14,4 +14,12 @@
   &--close {
     background-image: url(../images/menu__closer.svg);
   }
+
+  &--insta {
+    background-image: url(../images/insta_icon.svg);
+  }
+
+  &--facebook {
+    background-image: url(../images/facebook-letter-logo.svg);
+  }
 }
