--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,9 @@
 @import "./blocks/subscription.scss";
 @import "./blocks/button.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/swiper.scss";
+@import "./blocks/go-and-return.scss";
 
 * {
   box-sizing: border-box;
