--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -35,37 +35,30 @@
 
   &__title {
     text-transform: uppercase;
-    margin: 0;
-    text-decoration: none;
+
+    margin-top: 250px;
+    font-size: 45px;
+    line-height: 100%;
+    color: $c-black;
+    text-align: center;
+
+    @include onTablet {
+      text-align: left;
+      font-size: 54px;
+      margin-top: 40px;
+      line-height: 120%;
+    }
+
+    @include onDesktop {
+      font-size: 72px;
+      margin-top: 120px;
+    }
 
     &-block {
       width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
-    }
-
-    &-small {
-      text-decoration-thickness: 1px;
-      @include hover(text-decoration, underline);
-    }
-
-    &-big {
-      margin-top: 250px;
-      font-size: 45px;
-      line-height: 100%;
-      color: $c-black;
-
-      @include onTablet {
-        font-size: 54px;
-        margin-top: 40px;
-        line-height: 120%;
-      }
-
-      @include onDesktop {
-        font-size: 72px;
-        margin-top: 120px;
-      }
     }
   }
 
