hover effects on images was added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import "./blocks/footer.scss";
 @import "./blocks/swiper.scss";
 @import "./blocks/go-and-return.scss";
+@import "./blocks/image.scss";
 
 * {
   box-sizing: border-box;
