--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -68,7 +68,7 @@
       display: none;
 
       @include onPad {
-        display: contents;
+        display: block;
         height: 550px;
       }
 
@@ -77,11 +77,12 @@
       }
 
       &-phantom {
-        position: relative;
         display: none;
+        position: relative;
         height: 550px;
 
         @include onPad {
+          display: block;
           left: 2%;
           opacity: 1;
         }
@@ -93,7 +94,6 @@
     }
 
     &--desktop {
-      display: none;
       width: 0;
       height: 0;
 
