--- a/src/styles/blocks/Художній__Музей.scss
+++ b/src/styles/blocks/Художній__Музей.scss
@@ -32,6 +32,10 @@
 
     margin: 0;
     padding-bottom: 20px;
+
+    &--margin {
+      margin-left: 20px;
+    }
   }
 
   &__tree {
@@ -47,7 +51,7 @@
     }
 
     @include onDesktop {
-      padding: 8px 66px 50px;
+      padding: 210px 66px 50px;
     }
   }
 
@@ -92,13 +96,23 @@
     }
   }
 
+  &__buttom {
+    transition: 0.6s;
+    &:hover {
+      box-shadow: rgb(30, 104, 88) -5px 5px, rgb(37, 128, 108) -10px 10px;
+    }
+
+    @include onDesktop {
+      margin-left: 60%;
+    }
+  }
+
   &__vector {
     background-color: none;
     border: none;
     text-decoration: none;
 
     @include onDesktop {
-      margin-left: 60%;
       justify-content: center;
     }
 
@@ -120,6 +134,7 @@
       @include onPad {
         padding: 23px 68px;
       }
+
     }
 
     &--button {
