--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -10,7 +10,8 @@ h2 {
 body {
   margin: 0;
   box-sizing: border-box;
-  width: 320px;
+  width: 100%;
+  overflow-x: hidden;
 
   @include onPad {
     width: 100%;
@@ -33,6 +34,11 @@ ul {
 
 html {
   scroll-behavior: smooth;
+}
+
+.content {
+  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .page__body {
