--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -14,8 +14,6 @@
     justify-content: space-around;
     justify-items: end;
 
-    column-gap: 60px;
-
     border-bottom: 1px solid rgba(26, 90, 76,0.5);
 
     padding-bottom: 70px;
@@ -25,7 +23,6 @@
       margin-top: 5vh;
 
       grid-template-columns: repeat(2, 330px);
-      column-gap: 0;
       justify-content: start;
       justify-items: start;
 
@@ -109,6 +106,12 @@
     grid-column-end: 3;
 
     padding: 19px 25px;
+
+    transition: 0.6s;
+
+    &:hover {
+      box-shadow: #1a5a4c 0 5px, #1a5a4cc0 0 10px, #1a5a4c93 0 15px;
+    }
 
     @include onPad {
       display: none;
