--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -13,7 +13,7 @@
     position: relative;
     color: #fff;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-around;
   }
@@ -106,14 +106,24 @@
 
     &--button {
       width: 50px;
+      height: 100%;
       background: #f14a27;
       border: 0;
       cursor: pointer;
+      transition: 0.6s;
 
       &::after {
         content: ">";
         font-size: 20px;
         font-weight: 700;
+      }
+
+      &:hover {
+        box-shadow: #f149278f 0 5px, #f149277a 0 10px;
+
+        @include onDesktop {
+          box-shadow: #f1492796 -5px 5px, #f149277a -10px 10px;
+        }
       }
 
       @include onPad {
