bugs and problems were fixed

--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -68,6 +68,7 @@
     flex-grow: 1;
     border: none;
     padding: 0 0 0 24px;
+    outline: none;
 
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
