--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -94,6 +94,17 @@
 
       color: #687480;
 
+      &::selection {
+        background-color: #f14a27;
+      }
+
+      &:-webkit-autofill,
+      &:-webkit-autofill:hover,
+      &:-webkit-autofill:focus,
+      &:-webkit-autofill:active {
+        background-color: #fff !important;
+      }
+
       @include onPad {
         width: 375px;
         height: 70px;
