--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -138,4 +138,16 @@
       gap: 20px;
     }
   }
+
+  &__silk {
+    text-decoration: none;
+    color: inherit;
+    transition: 0.6s;
+
+    &:hover {
+      color: #232323;
+      background: #fff;
+      text-shadow: #474747 3px 5px 2px;
+    }
+  }
 }
