--- a/src/styles/blocks/nav__menu.scss
+++ b/src/styles/blocks/nav__menu.scss
@@ -6,7 +6,7 @@
   left: 0;
 
   width: 100%;
-  height: 45%;
+  height: 60%;
 
   background: #1a5a4c;
   transform: translateY(-100%);
@@ -17,7 +17,7 @@
   }
 
   @include onPad {
-    height: 30%;
+    height: 35%;
   }
 
   &__grid {
@@ -38,9 +38,13 @@
     border-bottom: 1px solid #fff;
 
     @include onPad {
-      margin: 55px 45px;
+      margin: 50px 33px;
       border-bottom: 0;
       border-right: 1px solid #fff;
+    }
+
+    @include onDesktop {
+      margin: 56px 43px;
     }
   }
 
@@ -87,6 +91,14 @@
 
   &__closer {
     padding-left: 12px;
+
+    @include onPad {
+      padding-left: 0;
+    }
+
+    @include onDesktop {
+      padding-left: 12px;
+    }
   }
 
   &__graphic {
