--- a/src/styles/blocks/Художній__Музей.scss
+++ b/src/styles/blocks/Художній__Музей.scss
@@ -34,7 +34,7 @@
     padding-bottom: 20px;
 
     &--margin {
-      margin-left: 20px;
+      margin: 20px;
     }
   }
 
@@ -87,7 +87,7 @@
       @include onDesktop {
         position: absolute;
         width: 1%;
-        height: 6%;
+        height: 1%;
         padding: 0 50px;
         left: 5.5vh;
         top: 63.5vh;
@@ -102,8 +102,12 @@
       box-shadow: rgb(30, 104, 88) -5px 5px, rgb(37, 128, 108) -10px 10px;
     }
 
+    @include onPad {
+      margin: 0 48px;
+    }
+
     @include onDesktop {
-      margin-left: 60%;
+      margin-left: 55%;
     }
   }
 
@@ -155,5 +159,9 @@
 
   &__content {
     margin-bottom: 30px;
+
+    @include onPad {
+      margin: 30px 40px;
+    }
   }
 }
