--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -7,11 +7,13 @@ h2 {
   margin: 0;
 }
 
+html,
 body {
   margin: 0;
   box-sizing: border-box;
   width: 100%;
   overflow-x: hidden;
+  position: relative;
 
   @include onPad {
     width: 100%;
