--- a/src/styles/blocks/Художній__Музей.scss
+++ b/src/styles/blocks/Художній__Музей.scss
@@ -29,12 +29,17 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 140.62%;
+    max-width: 200px;
 
     margin: 0;
     padding-bottom: 20px;
 
     &--margin {
       margin: 20px;
+    }
+
+    @include onDesktop {
+      max-width: 500px;
     }
   }
 
