--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -7,17 +7,19 @@ h2 {
   margin: 0;
 }
 
-html,
 body {
   margin: 0;
   box-sizing: border-box;
   width: 100%;
-  overflow-x: hidden;
-  position: relative;
 
   @include onPad {
     width: 100%;
   }
+}
+
+.scroll {
+  overflow-x: hidden;
+  position: relative;
 }
 
 .color--b {
