--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,46 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 100%;
+}
+%h2 {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+}
+
+%h3 {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  font-size: 28px;
+  line-height: 100%;
+}
+
+%h4 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: $grey-text-color;
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+%h5 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  margin: 0;
+  font-weight: 400;
+  line-height: 140%;
+}
+
+%list-reset {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
