--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+
+$c-gray: #e5e5e5;
+$main-text-color: #000;
+$main-color: #1a5a4c;
+$color-text-tickets: #0f0e08;
+$color-white: #fff;
+$grey-text-color: #687480;
+$red-point: #f14a27;
+$color-text-descr: #4e4e4e;
