created burger, fixed header

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,8 +1,6 @@
 .header {
-  font-family: "IBM Plex Sans", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
+  // display: none;
+  @extend %font_main;
   line-height: 150%;
   color: $title_color;
   position: relative;
@@ -51,10 +49,10 @@
   }
 
   &__box {
-    margin: 250px 0 70px;
+    margin: 250px 0 0;
 
     @include onTablet {
-      margin: 112px 0 107px;
+      margin: 112px 0 0;
       grid-column: 1 / 4;
     }
 
@@ -78,6 +76,7 @@
     z-index: -1;
 
     @include onTablet {
+      background-image: url(../images/muzej-1800x1200.jpg);
       height: 384px;
       max-height: max-content;
       width: 112%;
