--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -1,13 +1,24 @@
 .icon {
   display: block;
-  width: 18px;
+  width: $icon-width;
   padding-bottom: 100%;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   text-decoration: none;
 
+  &__container {
+    height: $cross-widht;
+    width: $cross-widht;
+    margin: 3px;
+  }
+
   &--menu {
     background-image: url(../images/icons/Vector.svg);
+  }
+  &--cross {
+    width: $cross-widht;
+    background-image: url(../images/icons/Vector.png);
+    margin-right: 34px;
   }
 }
