--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,7 @@
 @import "blocks/header";
 @import "blocks/icons";
 @import "blocks/button";
+@import "blocks/burger";
+@import "blocks/nav";
+@import "blocks/timetable";
+@import "blocks/cur-events";
