--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -43,3 +43,21 @@
   line-height: 100%;
   color: #687480;
 }
+
+%font_main {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #687480;
+}
+
+%font_timetable {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #687480;
+}
