--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -32,11 +32,12 @@
     @include onDesktop {
       border: 0;
       border-right: 1px solid rgba(26, 90, 76,0.5);
+      grid-template-columns: repeat(2, 265px);
 
       padding: 0;
 
       margin-bottom: 20px;
-      width: 550px;
+      width: 520px;
     }
 
     &--list {
@@ -52,6 +53,11 @@
 
   &__container {
     width: 100%;
+    padding-bottom: 20vh;
+
+    @include onPad {
+      padding-bottom: 12vh;
+    }
 
     @include onDesktop {
       display: grid;
@@ -148,6 +154,36 @@
       color: #232323;
       background: #fff;
       text-shadow: #474747 3px 5px 2px;
+    }
+  }
+
+  &__design {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse;
+
+    padding-bottom: 5vh;
+
+    @include onPad {
+      align-items: flex-start;
+      justify-content: space-between;
+      flex-direction: row;
+      padding-bottom: 2vh;
+
+      margin: 0 3vh;
+    }
+
+    &--text {
+      font-family: "IBM Plex Sans", sans-serif;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 12px;
+      line-height: 140.62%;
+
+      color: #0f0e08;
+
+      padding-bottom: 10px;
     }
   }
 }
