--- a/src/styles/blocks/nav__menu.scss
+++ b/src/styles/blocks/nav__menu.scss
@@ -5,8 +5,10 @@
   right: 0;
   left: 0;
 
+  padding-bottom: 15vh;
+
   width: 100%;
-  height: 59%;
+  height: 45%;
 
   background: #1a5a4c;
   transform: translateY(-100%);
@@ -18,6 +20,7 @@
 
   @include onPad {
     height: 35%;
+    padding-bottom: 5vh;
   }
 
   &__grid {
