--- a/src/styles/blocks/Художній__Музей.scss
+++ b/src/styles/blocks/Художній__Музей.scss
@@ -1,5 +1,5 @@
 .title {
-  text-transform: uppercase;
+
   display: block;
 
   font-family: "Montserrat", sans-serif;
@@ -14,7 +14,12 @@
   }
 
   @include onDesktop {
+    text-transform: uppercase;
     font-size: 74px;
+  }
+
+  &__head {
+    text-transform: uppercase;
   }
 
   &__button {
@@ -44,7 +49,7 @@
   }
 
   &__tree {
-    padding: 100px 20px 40px;
+    padding: 0 20px 40px;
     font-size: 36px;
     margin: 0;
     text-align: center;
@@ -52,11 +57,17 @@
     @include onPad {
       text-align: left;
       font-size: 48px;
-      padding: 188px 40px 48px;
+      padding: 0 40px;
     }
 
     @include onDesktop {
-      padding: 210px 66px 50px;
+      padding: 0 66px 50px;
+    }
+
+    &--space {
+      @include onPad {
+        margin-top: 210px;
+      }
     }
   }
 
@@ -70,6 +81,14 @@
     padding-bottom: 10px;
 
     color: #0f0e08;
+
+    @include onPad {
+      text-align: left;
+
+      font-size: 36px;
+
+      max-width: 460px;
+    }
   }
 
   &__podii {
@@ -166,7 +185,7 @@
     margin-bottom: 30px;
 
     @include onPad {
-      margin: 30px 40px;
+      margin: 117px 40px 30px;
     }
   }
 }
