--- a/src/styles/blocks/containers.scss
+++ b/src/styles/blocks/containers.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 
   grid-row-start: 1;
