--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -20,6 +20,7 @@
 
     @include onPad {
       display: grid;
+      padding-bottom: 65px;
     }
   }
 
@@ -71,7 +72,7 @@
   display: flex;
   justify-content: center;
 
-  height: 44vh;
+  height: 33vh;
   position: relative;
   right: 0;
 
@@ -80,8 +81,8 @@
   background-size: contain;
 
   @include onPad {
-    padding: 0 0 100px;
     overflow: hidden;
+    height: 44vh;
   }
 
   @include onDesktop {
