--- a/src/styles/blocks/nav__menu.scss
+++ b/src/styles/blocks/nav__menu.scss
@@ -19,18 +19,34 @@
   }
 
   @include onPad {
-    height: 35%;
+    height: 15%;
     padding-bottom: 5vh;
+  }
+
+  @include onDesktop {
+    height: 20%;
   }
 
   &__grid {
     @include onPad {
       display: grid;
-      grid-template-columns: repeat(2, 40vh);
+      grid-template-columns: repeat(2, 35vh);
     }
 
     @include onDesktop {
       grid-template-columns: repeat(2, 75vh);
+    }
+
+    &--graphic {
+      @include onPad {
+        display: grid;
+        grid-template-columns: repeat(2, 200px);
+        justify-items: center;
+      }
+
+      @include onDesktop {
+        padding-top: 2.6vh;
+      }
     }
   }
 
