--- a/src/styles/blocks/Художній__Музей.scss
+++ b/src/styles/blocks/Художній__Музей.scss
@@ -20,6 +20,7 @@
 
   &__head {
     text-transform: uppercase;
+    margin-top: 2vh;
   }
 
   &__button {
@@ -41,6 +42,10 @@
 
     &--margin {
       margin: 20px;
+
+      @include onPad {
+        padding-top: 3.8vh;
+      }
     }
 
     @include onDesktop {
