--- a/src/styles/blocks/nav__menu.scss
+++ b/src/styles/blocks/nav__menu.scss
@@ -28,6 +28,8 @@
   }
 
   &__grid {
+    width: 100%;
+
     @include onPad {
       display: grid;
       grid-template-columns: repeat(2, 35vh);
@@ -52,7 +54,7 @@
 
   &__content {
     position: relative;
-    margin: 20px 10px;
+    margin: 20px;
     padding: 0 0 100px;
     border-bottom: 1px solid #fff;
 
