--- a/src/styles/scroll.scss
+++ b/src/styles/scroll.scss
@@ -17,4 +17,18 @@
   @include onMobile {
     display: block;
   }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 0;
+    height: 0;
+    border: 1px solid #1a5a4c;
+    border-radius: 50px;
+    opacity: 0;
+    animation: pulse 2s infinite;
+  }
 }
