--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -249,6 +249,10 @@
 
     &__images {
       margin-top: 55px;
+
+      @include onTablet {
+        display: none;
+      }
     }
 
     &__img {
