--- a/src/styles/keyframes.scss
+++ b/src/styles/keyframes.scss
@@ -11,3 +11,21 @@
     transform: translate(0, 0);
   }
 }
+
+@keyframes pulse {
+  0% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  50% {
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+  }
+  100% {
+    opacity: 0;
+    width: 200%;
+    height: 200%;
+  }
+}
