--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import"./utils/_reset";
+@import"./utils/_mixins";
+@import"./utils/_variables";
 
-body {
-  background: $c-gray;
-}
+@import"./blocks/header";
+@import"./blocks/page";
+@import"./blocks/container";
+@import"./blocks/btn";
+@import"./blocks/subscribe";
+@import"./blocks/title";
+@import"./blocks/events";
+@import"./blocks/logo";
+@import"./blocks/slider";
+@import"./blocks/contact";
+@import"./blocks/footer";
+@import"./blocks/schedule";
+@import"./blocks/social";
+@import"./blocks/gallery";
+@import"./blocks/menu";
+@import"./blocks/icon-menu";
