--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -2,6 +2,12 @@
   display: inline-block;
   width: 24px;
   height: 24px;
+
+  background-repeat: no-repeat;
+  background-position: center;
+
+  @include hover(transform, scale(0.9));
+
   &--menu {
     background-image: url(../images/icons/icon-burger-menu.svg);
     position: absolute;
@@ -14,7 +20,6 @@
 
   &--facebook {
     background-image: url(../images/icons/facebook-icon.svg);
-    background-repeat: no-repeat;
   }
 
   &--instagram {
