--- a/src/styles/blocks/info.scss
+++ b/src/styles/blocks/info.scss
@@ -1,38 +1,135 @@
 .info {
+  font-weight: 400;
   font-size: 14px;
   line-height: 150%;
-  &--menu {
-    &::before {
-      content: "";
-      display: block;
-      width: 280px;
-      height: 1px;
-      background: rgba(255, 255, 255, 0.5);
-      margin: 24px 0;
-    }
-  }
 
   &__title {
-    @extend %h5;
+    margin: 0 0 20px;
+    font-weight: inherit;
+    font-size: inherit;
+    line-height: 20px;
   }
 
   &__list {
     @extend %list-reset;
-    margin-top: 20px;
+    margin-bottom: 16px;
+
+    @include onTablet {
+      grid-column-start: 1;
+    }
   }
 
   &__text {
-    margin-top: 16px;
-    margin-bottom: 0;
+    margin: 0;
   }
-  
+
+  &__list,
+  &__text {
+    @include onTablet {
+      max-width: 190px;
+    }
+
+    &--footer {
+      max-width: 125px;
+
+      @include onTablet {
+        max-width: 190px;
+      }
+    }
+  }
+
+  &__time {
+    font-weight: 600;
+  }
+
+  &--menu {
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 1px;
+      background: rgba(255, 255, 255, 0.5);
+      margin-bottom: 24px;
+    }
+
+    @include onTablet {
+      position: relative;
+      margin-bottom: 40px;
+      padding-left: 38px;
+
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 38px;
+
+      &::before {
+        position: absolute;
+        width: 1px;
+        height: 100%;
+      }
+    }
+
+    @include onDesktop {
+      column-gap: 30px;
+      padding-left: 102px;
+    }
+  }
+
+  &--footer {
+    position: relative;
+    padding-bottom: 70px;
+
+    @include pageGrid;
+
+    @include onTablet {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include onDesktop {
+      padding-bottom: 0;
+    }
+
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 1px;
+      background-color: rgba(26, 90, 76, 0.5);
+
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+
+      @include onDesktop {
+        width: 1px;
+        height: 100%;
+        left: 118%;
+      }
+    }
+  }
+
+  &__schedule {
+      grid-column: 1 / 2;
+  }
+
+  &__contacts {
+    grid-column: 2 / 3;
+  }
+
   &__button {
     position: absolute;
-    border: 1px solid $main-color;
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
     right: 0;
     bottom: 20px;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: $color-text-black;
+    &:hover {
+      color: $main-color;
+    }
+    &:active {
+      color: $red-point;
+    }
   }
 }
