--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,4 +1,16 @@
 .logo {
+  width: max-content;
+
+  &--header {
+    @include onTablet {
+      width: 200px;
+      transform: translate(50%);
+    }
+
+    @include onDesktop {
+      width: 170px;
+    }
+  }
 
   &__img {
     width: 55px;
@@ -6,5 +18,7 @@
     display: block;
     margin: 0 auto;
     pointer-events: all;
+
+    @include hover(transform, scale(0.9));
   }
 }
