--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "./blocks/page";
 @import "./blocks/container";
 @import "./blocks/header";
+@import "./blocks/title";
 @import "./blocks/icon";
 @import "./blocks/logo";
 @import "./blocks/button";
@@ -12,5 +13,6 @@
 @import "./blocks/events";
 @import "./blocks/event";
 @import "./blocks/gallery";
+@import "./blocks/swiper";
 @import "./blocks/subscribe";
 @import "./blocks/footer";
