--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,11 +1,9 @@
-$tablet-min-width: 576px;
-$desktop-min-width: 1024px;
-
-$c-gray: #e5e5e5;
-$main-text-color: #000;
 $main-color: #1a5a4c;
-$color-text-tickets: #0f0e08;
-$color-white: #fff;
-$grey-text-color: #687480;
-$red-point: #f14a27;
+$color-text-black: #0f0e08;
+$color-text-grey: #687480;
 $color-text-descr: #4e4e4e;
+$red-point: #f14a27;
+$c-gray: #e5e5e5;
+$color-white: #fff;
+
+$transition: all ease-in-out 0.4s;
