--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,3 +1,13 @@
 .container {
-  @include contentPaddingInline;
+  margin: 0 auto;
+  max-width: 1170px;
+  padding: 0 20px;
+
+  @include onTablet {
+    padding: 0 34px;
+  }
+
+  @include onDesktop {
+    padding: 0 54px;
+  }
 }
