--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,67 +1,10 @@
 .event {
-  &__img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    object-position: center;
-    margin-bottom: 20px;
+  @include onTablet {
+    @include pageGrid;
   }
 
-  &__subtitle {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    text-transform: uppercase;
-
-    &--lection {
-      justify-content: space-around;
-
-    }
-  }
-
-  &__type {
-    @extend %h4;
-  }
-
-  &__date {
-    position: relative;
-    margin: 0;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 150%;
-    color: $main-color;
-  }
-
-  &__name {
-    @extend %h3;
-    margin-bottom: 10px;
-
-    &::after {
-      content: "";
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background-color: $red-point;
-      transform: translateY(110%);
-      margin-left: 10px;
-    }
-
-    &--lection {
-      text-align: center;
-
-      &::after {
-        display: none;
-      }
-    }
-  }
-
-  &__descr {
-    margin: 0;
-    margin-bottom: 60px;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 150%;
-    color: $color-text-descr;
+  @include onDesktop {
+    align-items: center;
   }
 
   &--lection {
@@ -71,18 +14,152 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 210px;
+
+    @include onTablet {
+      height: 390px;
+    }
+    @include onDesktop {
+      height: 550px;
+    }
+  }
+
+  &__img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center;
+    margin-bottom: 20px;
+
+    @include hover (transform, scale(0.98));
+
+    @include onTablet {
+      grid-column: 1 / -1;
+      margin-bottom: 40px;
+      max-height: 520px;
+    }
+    @include onDesktop {
+      grid-column: 1 / 8;
+      margin-bottom: 0;
+    }
   }
 
   &__details {
+    @include onTablet {
+      grid-column: span 4;
+    }
+
+    @include onDesktop {
+      grid-column: 9 / 13;
+    }
 
     &--lection {
+      background-color: $color-white;
+      box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
       position: relative;
       margin: 0 auto;
-      background-color: $color-white;
-      box-shadow: 0, 2px, 0 rgba(26, 90, 76, 0.25);
-      width: 280px;
       padding: 20px 0;
+      max-width: 280px;
+      max-height: 104px;
       bottom: -80%;
+
+      @include onTablet {
+        box-sizing: border-box;
+        max-width: 570px;
+        max-height: 204px;
+        padding: 45px 55px 50px;
+      }
+
+      @include onDesktop {
+        padding: 45px 100px 50px;
+      }
     }
+  }
+
+  &__subtitle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 14px;
+
+    @include onTablet {
+      max-width: max-content;
+      margin-bottom: 23px;
+    }
+
+    &--lection {
+      justify-content: center;
+
+      @include onTablet {
+        max-width: 100%;
+        justify-content: space-between;
+      }
+      @include onDesktop {
+        margin-bottom: 16px;
+      }
+    }
+  }
+
+  &__type {
+    @extend %subtitle;
+    margin-right: 20px;
+  }
+
+  &__date {
+    color: $main-color;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    margin: 0;
+
+    @include onTablet {
+      font-size: 14px;
+    }
+  }
+
+  &__name {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 100%;
+    text-decoration: none;
+    margin: 0 0 10px;
+    position: relative;
+
+    &::after {
+      content: "";
+      background-color: $red-point;
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      margin-left: 10px;
+    }
+
+    @include onTablet {
+      font-size: 36px;
+      line-height: 100%;
+      margin-bottom: 14px;
+    }
+
+    &--lection {
+      text-align: center;
+      &::after {
+        display: none;
+      }
+
+      @include onTablet {
+        text-align: left;
+      }
+    }
+  }
+
+  &__descr {
+    margin: 0;
+    color: $color-text-descr;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
   }
 }
