--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,14 +1,36 @@
 .menu {
   height: 400px;
-  color: $color-white;
+  color: #fff;
   background-color: $main-color;
 
+  z-index: 2;
+
+  @include onTablet {
+    height: auto;
+  }
+
   &__content {
-    padding-block: 27px;
+    padding-top: 26px;
+
+    @include onTablet {
+      padding-top: 40px;
+      display: flex;
+    }
   }
 
   &__top {
     display: flex;
-    justify-content: space-between;
+    gap: 28px;
+    margin-bottom: 24px;
+
+    @include onTablet {
+      width: 50%;
+    }
+  }
+
+  &__nav {
+    @include onTablet {
+      margin: 0 auto;
+    }
   }
 }
