--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,34 @@
 @import "utils";
-@import "fonts";
 @import "typography";
+@import "container";
+@import "font-icons/style";
+@import "header/header";
+@import "header/overlay";
+@import "header/menu";
+@import "header/nav";
+@import "wrapper.container";
+@import "title";
+@import "carousel";
+@import "main/current-events";
+@import "main/current-event";
+@import "main/gallery";
+@import "main/subscription";
+@import "footer/footer";
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: "IBM Plex Sans", "Arial", sans-serif;
+  font-style: normal;
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  background: #fff;
+}
+
+.block-scroll {
+  overflow: hidden;
 }
