Added scroll top btn

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,3 +32,28 @@ body {
 .block-scroll {
   overflow: hidden;
 }
+
+#myBtn {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: fixed;
+  border: 1px solid $main-color;
+  background: url("../images/icons/arrow-up.svg") center center no-repeat;
+  bottom: 200px;
+  right: 20px;
+  cursor: pointer;
+  transition: box-shadow 0.3s ease-in-out;
+
+  @include onTablet {
+    right: 50px;
+  }
+
+  @include onDesktop {
+    right: 100px;
+  }
+
+  &:hover {
+    box-shadow: 0 0 10px $main-color;
+  }
+}
