--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -93,6 +93,42 @@
     }
   }
 
+  &__link {
+    display: inline-block;
+    position: relative;
+    transition: color 0.3s ease-in-out;
+    line-height: 30px;
+    width: auto;
+
+    &--width-fixed {
+      @include onTablet {
+        max-width: 195px;
+      }
+
+      @include onDesktop {
+        max-width: 159px;
+      }
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -5px;
+      width: 0;
+      height: 2px;
+      background-color: #000;
+      transition: width 0.3s ease-in-out;
+    }
+
+    &:hover {
+
+      &::before {
+        width: 100%;
+      }
+    }
+  }
+
   &__weekends {
     grid-column: span 1;
     margin-top: 30px;
