deploying on GitHub

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -104,7 +104,7 @@
 
   &__orange-rectangle {
     @extend %background-image-cover;
-    background-image: url(/src/images/orange-rectangle.svg);
+    background-image: url(../images/orange-rectangle.svg);
 
     height: $orange-rectangle-size-mobile;
     width: $orange-rectangle-size-mobile;
