--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -65,7 +65,7 @@
   }
 
   &--photo-1 {
-    background-image: url(/src/images/photo1_for-all.jpg);
+    background-image: url(../images/photo1_for-all.jpg);
 
     &:hover {
       transform: scale(1.01);
@@ -73,19 +73,19 @@
   }
 
   &--photo-2 {
-    background-image: url(/src/images/photo2_for-tabl.jpg);
+    background-image: url(../images/photo2_for-tabl.jpg);
 
     &:hover {
       transform: scale(1.01);
     }
 
     @include onDesktop {
-      background-image: url(/src/images/photo2_for-desk.jpg);
+      background-image: url(../images/photo2_for-desk.jpg);
     }
   }
 
   &--photo-3 {
-    background-image: url(/src/images/photo3_for-desk.jpg);
+    background-image: url(../images/photo3_for-desk.jpg);
 
     &:hover {
       transform: scale(1.01);
@@ -101,7 +101,7 @@
   }
 
   &--photo-4 {
-    background-image: url(/src/images/photo4_for-all.jpg);
+    background-image: url(../images/photo4_for-all.jpg);
 
     &:hover {
       transform: scale(1.01);
