--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -31,7 +31,7 @@
 
   &__background-image {
     @extend %background-image-cover;
-    background-image: url(/src/images/header-background-image.jpg);
+    background-image: url(../images/header-background-image.jpg);
 
     height: $header-height-mobile;
 
@@ -150,7 +150,7 @@
 
   &__tickets-arrow {
     @extend %background-image-contain;
-    background-image: url(/src/images/tickets-arrow.svg);
+    background-image: url(../images/tickets-arrow.svg);
 
     height: $subscribe-form-size-arrow;
     width: $subscribe-form-size-arrow;
