--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -24,7 +24,7 @@
 
   &__photo {
     @extend %background-image-cover;
-    background-image: url(/src/images/Rectangle20.jpg);
+    background-image: url(../images/Rectangle20.jpg);
 
     height: 210px;
     width: 100%;
