--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -8,7 +8,7 @@
   padding: 88px 20px;
   margin-bottom: 50px;
 
-  background-image: url(/src/images/subscribe.jpg);
+  background-image: url(../images/subscribe.jpg);
   @extend %background-image-cover;
 
   @include onTablet {
@@ -101,7 +101,7 @@
 
   &__button {
     @extend %background-image-cover;
-    background-image: url(/src/images/RectangleForm.jpg);
+    background-image: url(../images/RectangleForm.jpg);
 
     border: none;
     box-sizing: border-box;
@@ -122,7 +122,7 @@
 
   &__button-arrow {
     @extend %background-image-contain;
-    background-image: url(/src/images/FormArrow.svg);
+    background-image: url(../images/FormArrow.svg);
 
     height: $subscribe-form-size-arrow;
     width: $subscribe-form-size-arrow;
