--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -5,28 +5,28 @@
   height: $icon-menu-hight;
 
   &--menu-opener {
-    background-image: url(/src/images/menu-opener.svg);
+    background-image: url(../images/menu-opener.svg);
   }
 
   &--menu-closer {
-    background-image: url(/src/images/menu-closer.svg);
+    background-image: url(../images/menu-closer.svg);
   }
 
   &--facebook {
-    background-image: url(/src/images/Facebook.svg);
+    background-image: url(../images/Facebook.svg);
     width: $icon-social-media-size;
     height: $icon-social-media-size;
     margin-right: 25px;
   }
 
   &--instagram {
-    background-image: url(/src/images/instagram-3.svg);
+    background-image: url(../images/instagram-3.svg);
     width: $icon-social-media-size;
     height: $icon-social-media-size;
   }
 
   &--up-arrow {
-    background-image: url(/src/images/Arrow-up.svg);
+    background-image: url(../images/Arrow-up.svg);
     width: $icon-up-arrow-size;
     height: $icon-up-arrow-size;
   }
